[gd_scene load_steps=18 format=4 uid="uid://dd18gu8px7b47"]

[ext_resource type="Script" uid="uid://c50w27op4usqg" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/Structure3DContainer/Rendering/parts/WingRender/parts/RoomRender/room_render.gd" id="1_cmd18"]
[ext_resource type="PackedScene" uid="uid://dvmu5sm7wwcjo" path="res://Scenes/CellScene/lighting/ConstructionLights.tscn" id="2_5s4vs"]
[ext_resource type="Texture2D" uid="uid://btowjfs5c22bt" path="res://Textures/dust.png" id="3_donpq"]

[sub_resource type="ArrayMesh" id="ArrayMesh_nyhco"]
_surfaces = [{
"aabb": AABB(-4, -0.5, -8, 8, 1, 16),
"attribute_data": PackedByteArray("AACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/"),
"format": 34359738391,
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 36,
"vertex_data": PackedByteArray("AACAwAAAAL8AAABBAACAwAAAAL8AAADBAACAwAAAAD8AAADBAACAQAAAAL8AAADBAACAwAAAAL8AAADBAACAwAAAAL8AAABBAACAwAAAAD8AAADBAACAwAAAAL8AAADBAACAQAAAAL8AAADBAACAwAAAAD8AAADBAACAwAAAAD8AAABBAACAwAAAAL8AAABBAACAwAAAAL8AAABBAACAwAAAAD8AAABBAACAQAAAAD8AAABBAACAQAAAAD8AAABBAACAwAAAAD8AAABBAACAwAAAAD8AAADBAACAwAAAAL8AAABBAACAQAAAAL8AAABBAACAQAAAAL8AAADBAACAQAAAAD8AAABBAACAQAAAAL8AAABBAACAwAAAAL8AAABBAACAQAAAAL8AAADBAACAQAAAAL8AAABBAACAQAAAAD8AAABBAACAQAAAAL8AAADBAACAQAAAAD8AAADBAACAwAAAAD8AAADBAACAwAAAAD8AAADBAACAQAAAAD8AAADBAACAQAAAAD8AAABBAACAQAAAAD8AAABBAACAQAAAAD8AAADBAACAQAAAAL8AAADBAAD/f/9//n8AAP9//3/+fwAA/3//f/5//38AAP//AAD/fwAA//8AAP9/AAD//wAA/////wAA/z//////AAD/P/////8AAP8/AAD/f/9//n8AAP9//3/+fwAA/3//f/5//3//fwAA/z//f/9/AAD/P/9//38AAP8//3//////AAD/f/////8AAP9//////wAA/38AAP//AAD/fwAA//8AAP9/AAD//wAA/3//fwAA/z//f/9/AAD/P/9//38AAP8/////f/9//n////9//3/+f////3//f/5//////wAA/z//////AAD/P/////8AAP8//3//////AAD/f/////8AAP9//////wAA////f/9//n////9//3/+f////3//f/5/")
}]

[sub_resource type="ArrayMesh" id="ArrayMesh_5s4vs"]
_surfaces = [{
"aabb": AABB(-4, -0.5, -8, 8, 1, 16),
"attribute_data": PackedByteArray("AACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/"),
"format": 34359738391,
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 36,
"vertex_data": PackedByteArray("AACAwAAAAL8AAABBAACAwAAAAL8AAADBAACAwAAAAD8AAADBAACAQAAAAL8AAADBAACAwAAAAL8AAADBAACAwAAAAL8AAABBAACAwAAAAD8AAADBAACAwAAAAL8AAADBAACAQAAAAL8AAADBAACAwAAAAD8AAADBAACAwAAAAD8AAABBAACAwAAAAL8AAABBAACAwAAAAL8AAABBAACAwAAAAD8AAABBAACAQAAAAD8AAABBAACAQAAAAD8AAABBAACAwAAAAD8AAABBAACAwAAAAD8AAADBAACAwAAAAL8AAABBAACAQAAAAL8AAABBAACAQAAAAL8AAADBAACAQAAAAD8AAABBAACAQAAAAL8AAABBAACAwAAAAL8AAABBAACAQAAAAL8AAADBAACAQAAAAL8AAABBAACAQAAAAD8AAABBAACAQAAAAL8AAADBAACAQAAAAD8AAADBAACAwAAAAD8AAADBAACAwAAAAD8AAADBAACAQAAAAD8AAADBAACAQAAAAD8AAABBAACAQAAAAD8AAABBAACAQAAAAD8AAADBAACAQAAAAL8AAADBAAD/f/9//n8AAP9//3/+fwAA/3//f/5//38AAP//AAD/fwAA//8AAP9/AAD//wAA/////wAA/z//////AAD/P/////8AAP8/AAD/f/9//n8AAP9//3/+fwAA/3//f/5//3//fwAA/z//f/9/AAD/P/9//38AAP8//3//////AAD/f/////8AAP9//////wAA/38AAP//AAD/fwAA//8AAP9/AAD//wAA/3//fwAA/z//f/9/AAD/P/9//38AAP8/////f/9//n////9//3/+f////3//f/5//////wAA/z//////AAD/P/////8AAP8//3//////AAD/f/////8AAP9//////wAA////f/9//n////9//3/+f////3//f/5/")
}]

[sub_resource type="ArrayMesh" id="ArrayMesh_donpq"]
_surfaces = [{
"aabb": AABB(-10, -2, -10, 20, 4, 20),
"attribute_data": PackedByteArray("AACAPwAAAACamXk/mpl5PwAAgD8AAIA/zczMPM3MzDwAAIA/AAAAAAAAAAAAAAAAAAAAAAAAgD/NzMw8zczMPAAAAAAAAAAAmpl5P83MzDwAAIA/AAAAAM3MzDzNzMw8AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AACAPwAAAACamXk/zczMPJqZeT+amXk/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AACAPwAAAAAAAAAAAAAAAAAAgD8AAIA/zczMPJqZeT8AAAAAAACAP5qZeT+amXk/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAgD/NzMw8mpl5P83MzDzNzMw8mpl5P5qZeT8AAAAAAACAPwAAgD8AAIA/mpl5P83MzDwAAIA/AAAAAM3MzDzNzMw8AAAAAAAAgD/NzMw8mpl5P83MzDzNzMw8AAAAAAAAgD/NzMw8zczMPAAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAAACamXk/zczMPJqZeT+amXk/AAAAAAAAAAAAAIA/AACAPwAAgD8AAAAAzczMPM3MzDwAAIA/AAAAAAAAAAAAAAAAAACAPwAAAAAAAAAAAAAAAAAAgD8AAIA/mpl5P5qZeT8AAAAAAACAPwAAgD8AAIA/AACAPwAAAACamXk/mpl5PwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/zczMPJqZeT8AAAAAAACAP5qZeT+amXk/AAAAAAAAAAAAAIA/AAAAAAAAgD8AAIA/AACAPwAAgD8AAAAAAACAPwAAAAAAAAAAAACAPwAAgD8AAAAAAACAPwAAAAAAAAAAAAAAAAAAAAAAAIA/AAAAAAAAgD8AAIA/AACAPwAAgD8AAAAAAACAPwAAAAAAAAAAAACAPwAAgD8AAAAAAACAPwAAAAAAAAAAAAAAAAAAAAAAAIA/AAAAAAAAgD8AAIA/AAAAAAAAAAAAAIA/AAAAAAAAgD8AAIA/"),
"format": 34359738391,
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 96,
"vertex_data": PackedByteArray("AAAgwQAAAMAAACDBAAAYQQAAAMAAABjBAAAgQQAAAMAAACDBAAAYQQAAAEAAABhBAAAgQQAAAEAAACDBAAAgQQAAAEAAACBBAAAgwQAAAEAAACBBAAAYQQAAAEAAABhBAAAgQQAAAEAAACBBAAAYQQAAAEAAABjBAAAgQQAAAEAAACDBAAAYQQAAAEAAABhBAAAgQQAAAEAAACBBAAAgQQAAAEAAACDBAAAgQQAAAMAAACDBAAAgQQAAAEAAACDBAAAYQQAAAEAAABjBAAAYwQAAAEAAABjBAAAgQQAAAMAAACDBAAAgQQAAAEAAACDBAAAgwQAAAEAAACDBAAAgQQAAAMAAACBBAAAgQQAAAEAAACBBAAAgQQAAAMAAACDBAAAYQQAAAMAAABhBAAAgQQAAAMAAACBBAAAYQQAAAMAAABjBAAAgQQAAAEAAACBBAAAgQQAAAMAAACBBAAAgwQAAAMAAACBBAAAgQQAAAMAAACBBAAAYQQAAAMAAABhBAAAYwQAAAMAAABhBAAAYQQAAAMAAABjBAAAgQQAAAMAAACBBAAAgQQAAAMAAACDBAAAYwQAAAMAAABjBAAAgwQAAAMAAACDBAAAYwQAAAMAAABhBAAAgwQAAAEAAACBBAAAYwQAAAEAAABhBAAAYQQAAAEAAABhBAAAgQQAAAMAAACBBAAAYwQAAAMAAABhBAAAgwQAAAMAAACBBAAAgwQAAAMAAACBBAAAgwQAAAMAAACDBAAAgwQAAAEAAACDBAAAgwQAAAMAAACDBAAAYwQAAAMAAABjBAAAYQQAAAMAAABjBAAAgQQAAAMAAACDBAAAgwQAAAEAAACDBAAAgwQAAAMAAACDBAAAYwQAAAMAAABhBAAAgwQAAAMAAACDBAAAgwQAAAMAAACBBAAAgwQAAAEAAACBBAAAgQQAAAEAAACBBAAAgwQAAAMAAACBBAAAYwQAAAEAAABjBAAAgwQAAAEAAACBBAAAgwQAAAEAAACDBAAAgQQAAAEAAACDBAAAYwQAAAEAAABjBAAAgwQAAAEAAACDBAAAgwQAAAEAAACDBAAAgwQAAAEAAACBBAAAgwQAAAMAAACBBAAAYwQAAAEAAABhBAAAgwQAAAEAAACBBAAAYwQAAAEAAABjBAAAYQQAAAEAAABhBAAAYQQAAAMAAABhBAAAYQQAAAMAAABjBAAAYwQAAAMAAABhBAAAYQQAAAMAAABhBAAAYQQAAAEAAABhBAAAYwQAAAEAAABjBAAAYQQAAAEAAABjBAAAYQQAAAMAAABjBAAAYQQAAAMAAABjBAAAYwQAAAMAAABjBAAAYwQAAAEAAABjBAAAYQQAAAMAAABjBAAAYQQAAAEAAABjBAAAYQQAAAEAAABhBAAAYwQAAAMAAABhBAAAYwQAAAEAAABhBAAAYwQAAAEAAABjBAAAYwQAAAEAAABjBAAAYwQAAAMAAABjBAAAYwQAAAMAAABhBAAAYQQAAAEAAABhBAAAYwQAAAEAAABhBAAAYwQAAAMAAABhB/38AAP//AAD/fwAA//8AAP9/AAD//wAA/3//////AAD/f/////8AAP9//////wAA/3//////AAD/f/////8AAP9//////wAA/3//////AAD/f/////8AAP9//////wAA////f/9//n////9//3/+f////3//f/5//3//////AAD/f/////8AAP9//////wAA/////wAA/z//////AAD/P/////8AAP8/////f/9//n////9//3/+f////3//f/5//38AAAAAAAD/fwAAAAAAAP9/AAD//wAA/3//fwAA/z//f/9/AAD/P/9//38AAP8//38AAAAAAAD/fwAAAAAAAP9/AAAAAAAA/38AAP//AAD/fwAAAAAAAP9/AAD//wAA/38AAP//AAD/fwAA//8AAP9/AAAAAAAA/3//////AAD/f/////8AAP9//////wAA/38AAAAAAAD/fwAAAAAAAP9/AAD//wAAAAD/f/9//n8AAP9//3/+fwAA/3//f/5//38AAP//AAD/fwAA//8AAP9/AAD//wAA/////wAA/z//////AAD/P/////8AAP8//38AAAAAAAD/fwAA//8AAP9/AAD//wAA/3//fwAA/z//f/9/AAD/P/9//38AAP8//3//////AAD/f/////8AAP9//////wAA/3//////AAD/f/////8AAP9//////wAAAAD/f/9//n8AAP9//3/+fwAA/3//f/5//3//////AAD/f/////8AAP9//////wAAAAD/f/9/AIAAAP9//38AgAAA/3//fwCA/////wAA/7//////AAD/v/////8AAP+//3//fwAA/7//f/9/AAD/v/9//38AAP+//3//fwAA/7//f/9/AAD/v/9//38AAP+/AAD/f/9/AIAAAP9//38AgAAA/3//fwCA////f/9/AID///9//38AgP///3//fwCA////f/9/AID///9//38AgP///3//fwCA/////wAA/7//////AAD/v/////8AAP+/")
}]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_donpq"]
albedo_color = Color(0.856067, 0.856067, 0.856067, 1)
metallic = 0.32
metallic_specular = 0.0

[sub_resource type="ArrayMesh" id="ArrayMesh_cmd18"]
lightmap_size_hint = Vector2i(0, -75)
_surfaces = [{
"aabb": AABB(-7.5, -7.5, -7.5, 15, 15, 15),
"attribute_data": PackedByteArray("AAAAAAAAAAAAAIA/AACAPwAAgD8AAAAA/uEVPlotWj0AAIA/AAAAANZfUD4AAAAAAAAAAAAAgD8q/Zo+2F9QPgAAAADWX1A+AAAAAAAAgD/+4RU+d3d3PwAAAAB3d3c/d3d3P3z/Cz4AAIA/AAAAAHd3dz8AAAAAAACAPwAAgD/+4RU+Wi1aPf7hFT53d3c/AACAPwAAgD/+4RU+d3d3PwAAAAAAAIA/AACAPwAAgD93d3c/fP8LPvBPQj58/ws+d3d3P3z/Cz4AAIA/AACAPwAAgD8AAAAAAAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AAAAAP7hFT5aLVo9AACAPwAAgD8q/Zo+2F9QPgAAAAAAAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AACAPwAAgD/wT0I+fP8LPvJPQj41uRQ/Kv2aPthfUD4AAIA/AACAP1BnYj/YX1A+AAAAAAAAgD/yT0I+UGdiPwAAAABQZ2I/UGdiP9hfUD4AAIA/AAAAAFBnYj8AAAAAAACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD/yT0I+NbkUP/JPQj5QZ2I/AACAPwAAgD/yT0I+UGdiPwAAAAAAAIA/AAAAAAAAAAAAAIA/AACAPwAAgD8AAAAAUGdiP9hfUD4AAIA/AACAPwAAgD8AAAAAAAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/2NcsPwAAAAD/PhM/7HaZPkTQ6z4AAAAAefOuPN4XCj/Knis+UVCmPgAAgD9RUKY+AACAP94XCj9586483hcKPwAAgD9RUKY+ZhNNPxR1pj6jix8/o4sfPxR1pj4UdaY+o4sfP6OLHz8AAAAAo4sfPxR1pj4UdaY+uejAPgAAgD9VRgk/sGoVP3bFLD8AAIA/AAAAABR1pj4UdaY+FHWmPgAAAACjix8/o4sfP6OLHz9mE00/FHWmPkOTcj99Hwo/o4sfP6OLHz9Dk3I/fR8KP0OTcj+jix8/"),
"format": 34359738391,
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 96,
"vertex_data": PackedByteArray("AADwwAAA8MAAAPBAAADwQAAA8MAAAPDAAADwwAAA8MAAAPDAAADwQBG+qUCvbtZAAADwQAAA8MAAAPBAAADwQBNTjkAAAPBAAADwQAAA8MAAAPBAUWU9QBNTjkAAAPBAAADwQBNTjkAAAPBAAADwQAAA8EAAAPDAAADwQBG+qUAAAODAAADwQAAA8EAAAODAPmCuQAAA8EAAAODAAADwQAAA8EAAAPDAAADwQAAA8EAAAODAAADwQAAA8MAAAPDAAADwQBG+qUCvbtZAAADwQBG+qUAAAODAAADwQAAA8MAAAPDAAADwQBG+qUAAAODAAADwQAAA8EAAAPDAAADwwAAA8EAAAPDAPmCuQAAA8EAAAODAPmCuQAAA8ECI6pRAPmCuQAAA8EAAAODAAADwwAAA8EAAAPDAAADwQAAA8EAAAPDAAADwQAAA8MAAAPDAAADwQAAA8EAAAPDAAADwwAAA8EAAAPDAAADwQAAA8MAAAPDAAADwQAAA8MAAAPBAAADwQBG+qUCvbtZAAADwwAAA8MAAAPBAUWU9QBNTjkAAAPBAAADwQAAA8MAAAPBAAADwwAAA8MAAAPBAAADwQAAA8MAAAPBAAADwQAAA8MAAAPDAAADwwAAA8EAAAPDAPmCuQAAA8ECI6pRAD22bvwAA8ECH6pRAUWU9QBNTjkAAAPBAAADwwAAA8MAAAPBAtoG4wBNTjkAAAPBAAADwwAAA8EAAAPBAtYG4wAAA8ECH6pRAtoG4wAAA8EAAAPBAtoG4wBNTjkAAAPBAAADwwAAA8EAAAPBAtoG4wAAA8EAAAPBAAADwwAAA8MAAAPBAAADwwAAA8MAAAPDAAADwwAAA8EAAAPDAAADwwAAA8EAAAPDAD22bvwAA8ECH6pRAtYG4wAAA8ECH6pRAAADwwAAA8EAAAPDAtYG4wAAA8ECH6pRAAADwwAAA8EAAAPBAAADwQAAA8MAAAPDAAADwwAAA8EAAAPDAAADwwAAA8MAAAPDAtoG4wBNTjkAAAPBAAADwwAAA8MAAAPBAAADwwAAA8EAAAPBAAADwwAAA8EAAAPDAAADwwAAA8EAAAPBAAADwwAAA8MAAAPBAPmCuQAAA8EAAAODAAADwQAAA8EAAAODAAADwQBG+qUAAAODAAADwQBG+qUCvbtZAPmCuQAAA8ECI6pRAPmCuQAAA8EAAAODAAADwQBG+qUAAAODAAADwQBG+qUCvbtZAPmCuQAAA8EAAAODAPmCuQAAA8ECI6pRAUWU9QBNTjkAAAPBAD22bvwAA8ECH6pRAUWU9QBNTjkAAAPBAtoG4wBNTjkAAAPBAD22bvwAA8ECH6pRAtoG4wBNTjkAAAPBAtoG4wAAA8EAAAPBAtYG4wAAA8ECH6pRAtYG4wAAA8ECH6pRAD22bvwAA8ECH6pRAtoG4wBNTjkAAAPBAUWU9QBNTjkAAAPBAPmCuQAAA8ECI6pRAAADwQBG+qUCvbtZAUWU9QBNTjkAAAPBAAADwQBG+qUCvbtZAAADwQBNTjkAAAPBA/38AAP//AAD/fwAA//8AAP9/AAD//wAA////f/9//n////9//3/+f////3//f/5//3//fwAA/z//f/9/AAD/P/9//38AAP8/////f/9//n////9//3/+f////3//f/5//3//////AAD/f/////8AAP9//////wAA////f/9//n////9//3/+f////3//f/5/////f/9//n////9//3/+f////3//f/5//3//////AAD/f/////8AAP9//////wAA/3//////AAD/f/////8AAP9//////wAA/////wAA/z//////AAD/P/////8AAP8/////f/9//n////9//3/+f////3//f/5//3//fwAA/z//f/9/AAD/P/9//38AAP8//38AAP//AAD/fwAA//8AAP9/AAD//wAA/3//////AAD/f/////8AAP9//////wAA/3//fwAA/z//f/9/AAD/P/9//38AAP8//3//////AAD/f///AAAAAP9//////wAA/3//fwAA/z//f/9/AAD/P/9//38AAP8/AAD/f/9//n8AAP9//3/+fwAA/3//f/5//3//////AAD/f/////8AAP9///8AAAAA/3//////AAD/f///AAAAAP9//////wAA/////wAA/z//////AAD/P/////8AAP8//3//fwAA/z//f/9/AAD/P/9//38AAP8/AAD/f/9//n8AAP9//3/+fwAA/3//f/5//3//fy5CFuH/f/9/LkIW4f9//38uQhbhLcLQvf////8twtC9/////y3C0L3/////LcLQvf////8twtC9/////y3C0L3//////3/Dvf7//7//f8O9/v//v/9/w73+//+//3/Dvf///7//f8O9////v/9/w73///+//v//f8O9///+//9/w73///7//3/Dvf///3/Dvf///7//f8O9////v/9/w73///+//3/Dvf///7//f8O9////v/9/w73///+//3/Dvf///7//f8O9////v/9/w73///+/")
}]

[sub_resource type="Gradient" id="Gradient_vl5hs"]
colors = PackedColorArray(0.68382, 0.875024, 0, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_d5qij"]
gradient = SubResource("Gradient_vl5hs")

[sub_resource type="Curve" id="Curve_ivnky"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.516854), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_h7kq0"]
curve = SubResource("Curve_ivnky")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6muk7"]
direction = Vector3(1, -5, 0)
flatness = 0.01
initial_velocity_min = -20.0
initial_velocity_max = 5.0
gravity = Vector3(0, -5, 0)
scale_min = 0.5
scale_max = 2.0
scale_curve = SubResource("CurveTexture_h7kq0")
color = Color(1, 0.18, 0.18, 1)
color_ramp = SubResource("GradientTexture1D_d5qij")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6jgyh"]
transparency = 1
blend_mode = 1
albedo_texture = ExtResource("3_donpq")

[sub_resource type="QuadMesh" id="QuadMesh_q7q21"]
material = SubResource("StandardMaterial3D_6jgyh")

[sub_resource type="PlaneMesh" id="PlaneMesh_nyhco"]
size = Vector2(20, 20)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5s4vs"]
albedo_color = Color(0.899258, 0.899258, 0.899258, 1)

[node name="RoomScene" type="Node3D"]
script = ExtResource("1_cmd18")
build_room = null

[node name="Gate" type="Node3D" parent="."]

[node name="Flap1" type="MeshInstance3D" parent="Gate"]
transform = Transform3D(1, 2.98023e-08, 0, -2.98023e-08, 1, 0, 0, 0, 1, -4, 0, 0)
mesh = SubResource("ArrayMesh_nyhco")

[node name="Flap2" type="MeshInstance3D" parent="Gate"]
transform = Transform3D(1, 2.98023e-08, 0, -2.98023e-08, 1, 0, 0, 0, 1, 4, 0, 0)
mesh = SubResource("ArrayMesh_5s4vs")

[node name="Flap3" type="MeshInstance3D" parent="Gate"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, -1.12408, -4)
mesh = SubResource("ArrayMesh_nyhco")

[node name="Flap4" type="MeshInstance3D" parent="Gate"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, -1.12408, 4)
mesh = SubResource("ArrayMesh_5s4vs")

[node name="Barrier" type="Node3D" parent="."]

[node name="SafetyGate" type="MeshInstance3D" parent="Barrier"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.3, 0)
mesh = SubResource("ArrayMesh_donpq")
surface_material_override/0 = SubResource("StandardMaterial3D_donpq")

[node name="SafetyLights" type="Node3D" parent="Barrier/SafetyGate"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.2258, 0.679363, -9.89843)
visible = false

[node name="ConstructionLights" parent="Barrier/SafetyGate/SafetyLights" instance=ExtResource("2_5s4vs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.546425, 0)

[node name="ConstructionLights2" parent="Barrier/SafetyGate/SafetyLights" instance=ExtResource("2_5s4vs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.372237, 0.546425, 20.0712)

[node name="ConstructionLights3" parent="Barrier/SafetyGate/SafetyLights" instance=ExtResource("2_5s4vs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19.846, 0.546425, 0)

[node name="ConstructionLights4" parent="Barrier/SafetyGate/SafetyLights" instance=ExtResource("2_5s4vs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20.2182, 0.546425, 20.0712)

[node name="Room" type="Node3D" parent="."]
transform = Transform3D(1, 2.98023e-08, 0, -2.98023e-08, 1, 0, 0, 0, 1, -4, 0, 0)

[node name="RoomRender" type="MeshInstance3D" parent="Room"]
transform = Transform3D(-4.37114e-08, -2.98023e-08, -1, -1.3027e-15, 1, -2.98023e-08, 1, 0, -4.37114e-08, 4, 7, 0)
mesh = SubResource("ArrayMesh_cmd18")
skeleton = NodePath("../..")

[node name="GPUParticles3D" type="GPUParticles3D" parent="Room/RoomRender"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.338004, -12.2338, -0.361875)
amount = 30
lifetime = 2.0
speed_scale = 2.0
process_material = SubResource("ParticleProcessMaterial_6muk7")
draw_pass_1 = SubResource("QuadMesh_q7q21")

[node name="OmniLight3D" type="OmniLight3D" parent="Room/RoomRender"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.96064, 0)
light_color = Color(0.163639, 0.68978, 1, 1)
light_energy = 3.0
light_volumetric_fog_energy = 0.0
shadow_enabled = true
omni_range = 15.7656
omni_attenuation = -0.693

[node name="BottomMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, -0.920077, 0)
mesh = SubResource("PlaneMesh_nyhco")
skeleton = NodePath("../Gate/Flap4")
surface_material_override/0 = SubResource("StandardMaterial3D_5s4vs")

[node name="OriginalMesh2" type="CSGBox3D" parent="."]
visible = false
size = Vector3(15, 15, 15)

[node name="CSGBox3D" type="CSGBox3D" parent="OriginalMesh2"]
transform = Transform3D(0.682598, 0.730794, 0, -0.730794, 0.682598, 0, 0, 0, 1, 8.95021, 7.41433, 0)
visible = false
operation = 2
size = Vector3(14, 5, 14)

[node name="CSGBox3D2" type="CSGBox3D" parent="OriginalMesh2"]
transform = Transform3D(-2.98111e-08, -3.19685e-08, -1, -0.731354, 0.681998, 0, 0.681998, 0.731354, -4.37114e-08, 1.23417, 7.41433, 8.15184)
visible = false
operation = 2
size = Vector3(14, 5, 14)
